Fri Aug 25 17:12:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* k5-int.h: Added prototypes for encode_krb5_padata_sequence and
	        decode_krb5_padata_sequence.

	* krb5.hin: Removed unused (and misleading) macros
		KEYTYPE_IS_LOCAL, ETYPE_IS_LOCAL, CKSUMTYPE_IS_LOCAL

Thu Aug 24 19:23:10 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Wed Aug 16 02:45:19 1995  Chris Provenzano <proven@mit.edu>

	*  k5-int.h (krb5_lock_file(), krb5_unlock_file()):
		Use fds instead of FILE *s and don't pass the filename.

Fri Aug  4 23:04:06 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* k5-int.h: Add prototypes for krb5_crypto_os_localaddr and
		krb5_crypto_us_timeofday

Thu Jul 27 15:04:37 EDT 1995	Paul Park	(pjpark@mit.edu)
	* k5-int.h - Inline or delete header files included here.  These were:
		{asn1, dbm, ext-proto, k5-config, k5-errors, k5-sockets,
		 libos, los-proto, mit-des, preauth, rsa-md5 and sysincl}.h
		Also remove #defines which controlled the KDC, move these
		definitions to kdc/configure.in.

Thu Jul 27 04:27:45 1995  Chris Provenzano <proven@mit.edu)

	* krb5.hin : Added #define KEYTYPE_UNKNOWN

Tue Jul 11 13:12:14 1995    <tytso@rsx-11.mit.edu>

	* krb5.hin (krb5_cc_get_type, krb5_kt_get_type): Add the new
		functions to get the type of the credentials cache and key
		table.
	
Sun Jul  9 21:37:50 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb5.hin: Add krb5_rd_cred prototype.

Fri Jul 7 15:56:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* krb5.hin - Add checksum verifier dispatch in the checksum entry.
		This is now the supported method for verifying checksums.  Also
		add krb5_verify_checksum which uses this dispatch.

Thu Jul  6 17:19:26 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* krb5.hin: Change definition of krb5_os_localaddr to include
		context argument.

Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* k5-int.h disable inclusion of profile.h for macintosh build